--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,14 @@
 	  <dependency>
 	    <groupId>org.apache.myfaces.core</groupId>
 	    <artifactId>myfaces-impl</artifactId>
-	    <version>2.2.2</version>
+	    <version>2.2.3</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
+   		<scope>provided</scope>
 	</dependency>
   
       <dependency>
